src/objects/ints__EfxReport_Local_Inquiry__c.object
<CustomObject>
    <fields>
        <fullName>ints__CustomerNumber__c</fullName>
        <label>CustomerNumber</label>
        <length>20</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>ints__EfxReport__c</fullName>
        <label>EfxReport</label>
        <referenceTo>ints__EfxReport__c</referenceTo>
        <relationshipLabel>EfxReport Local Inquiries</relationshipLabel>
        <relationshipName>EfxReport_Local_Inquiries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ints__Name__c</fullName>
        <label>Name</label>
        <length>50</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>ints__date__c</fullName>
        <label>date</label>
        <length>20</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <label>EfxReport Local Inquiry</label>
    <nameField>
        <displayFormat>EFX-LOCAL-INQR-{0000000000}</displayFormat>
        <label>EfxReport Local Inquiry Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EfxReport Local Inquiries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>